--- a/SimpleWebClient/SimpleWebClient.vcxproj
+++ b/SimpleWebClient/SimpleWebClient.vcxproj
@@ -68,6 +68,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="HTMLParserBase.h" />
+    <ClInclude Include="Socket.h" />
+    <ClInclude Include="URL.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
